Add CSS styling and HTML to index

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>The Lunch Box Generator - Jenine Marquez</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
 
   </head>
   <body>
-    <script src="dist/js/bundle.js"></script>
+    <script src="./src/index.js"></script>
   </body>
 </html>
